# CatFishers

./: .gitignore  CatFishers_dokumentaatio.docx  README.md  xmake.lua  xmake.x86_64
.github/workflows/: cmake-multi-platform.yml
CatCore/: CMakeLists.txt  xmake.lua
CatCore/src/: CatCore.h  CatLog.h  CatMath.h  Commands.h  Fish.cpp  Fish.h  Inventory.cpp  Inventory.h  Item.cpp  Item.h  Player.cpp  Player.h  Server.cpp  ServerUtils.cpp  ServerUtils.h  Sprite.cpp  Sprite.h
Client/: xmake.lua
Client/Resources/Models/: water.glb
Client/src/: AndroidInput.cpp  AndroidInput.h  Client.cpp  Client.h  ClientCommands.cpp  ClientCommands.h  ClientConfig.cpp  ClientConfig.h  Game.cpp  Game.h  Menu.cpp  Menu.h  ResourceManager.cpp  ResourceManager.h  Server.cpp  Server.h  State.h  main.cpp
Libraries/commandline/: xmake.lua
Libraries/raylib/: xmake.lua
Libraries/raylib/src/: raylib.h  xmake.lua
Libraries/raymob/: display.c  helper.c  soft_keyboard.c  xmake.lua
Server/: CMakeLists.txt  xmake.lua
Server/src/: Game.cpp  Game.h  Server.cpp  Server.h  ServerCommands.cpp  ServerCommands.h  ServerConfig.cpp  ServerConfig.h  main.cpp
android/: AndroidManifest.xml
android/src/: DisplayManager.java  NativeLoader.java  SoftKeyboard.java
